tests/ui/privacy/private-item-simple.stderr
error[E0603]: function `f` is private
  --> $DIR/private-item-simple.rs:12:12
   |
LL |     use a::f;
   |            ^ private function
   |
note: the function `f` is defined here
  --> $DIR/private-item-simple.rs:4:5
   |
LL |     fn f() {}
   |     ^^^^^^

error[E0603]: function `f` is private
  --> $DIR/private-item-simple.rs:8:8
   |
LL |     a::f();
   |        ^ private function
   |
note: the function `f` is defined here
  --> $DIR/private-item-simple.rs:4:5
   |
LL |     fn f() {}
   |     ^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
